--- a/PSD-Web/PSD-Challenge/style.css
+++ b/PSD-Web/PSD-Challenge/style.css
@@ -46,7 +46,10 @@ hr { display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin:
 
 input, select { vertical-align: middle; }
 
-/* define element standards */
+/* Body Styles */
+html{
+    font-size: 16px;
+}
 @font-face {
     font-family: WisdomScript; src: url('font/wisdom-script.otf');
 }
@@ -58,32 +61,8 @@ body{
     width: 95%;
     margin: auto 2.5%;
 }
-header {
-    height: 10%;
-    font-weight: 700;
-}
-h1{
-    font-size: 1.875em;
-    float: left;
-    margin: 2.5% auto;
-    width: 40%;
-}
 ul {
     list-style: none;
-}
-nav ul{
-    float: left;
-    margin: 3.5% auto 1.5% auto;
-    width: 60%;
-    text-align: right;
-}
-nav ul li{
-    display: inline;
-    margin: auto 0 auto 2.5%;
-}
-.hero-image{
-    clear: both;
-    height: 35%;
 }
 img{
     width: 100%;
@@ -96,6 +75,34 @@ img{
 h1, nav ul, h3, h4, .section-header, .footer-copy{
     text-transform: uppercase;
 }
+
+/*Header Styles*/
+header {
+    height: 10%;
+    font-weight: 700;
+}
+h1{
+    font-size: 1.875em;
+    float: left;
+    margin: 2.5% auto;
+    width: 40%;
+}
+nav ul{
+    float: left;
+    margin: 3.5% auto 1.5% auto;
+    width: 60%;
+    text-align: right;
+}
+nav ul li{
+    display: inline;
+    margin: auto 0 auto 2.5%;
+}
+
+/*Top Section*/
+.hero-image{
+    clear: both;
+    height: 35%;
+}
 .main-copy{
     margin: 1.5% auto 2.5% auto;
 }
@@ -107,14 +114,15 @@ h1, nav ul, h3, h4, .section-header, .footer-copy{
 .main-copy p{
     line-height: 1.618;
 }
+
+/*Body Section*/
+.content-section{
+    text-align: left;
+}
 .content{
     float: left;
     width: 33%;
     border-top: .125em solid #dedbdc;
-}
-#border-two{
-    border-right: .125em solid #dedbdc;
-    border-left: .125em solid #dedbdc;
 }
 .content p{
     line-height: 1.618;
@@ -133,8 +141,18 @@ h1, nav ul, h3, h4, .section-header, .footer-copy{
     height: auto;
     margin: 0 auto 0 2.5%
 }
-.main, .content-section{
-    text-align: left;
+#border-two{
+    border-right: .125em solid #dedbdc;
+    border-left: .125em solid #dedbdc;
+}
+
+/*Footer Section*/
+footer{
+    width: 100%;
+    height: 50px;
+    border-top:3px solid #eee;
+    clear: both;
+    text-align: center;
 }
 .script{
     text-transform: none;
@@ -144,11 +162,4 @@ h4{
     margin: 1em auto;
     font-size: .75em;
     font-weight: 700;
-}
-footer{
-    width: 100%;
-    height: 50px;
-    border-top:3px solid #eee;
-    clear: both;
-    text-align: center;
 }
